--- a/facts.html
+++ b/facts.html
@@ -12,17 +12,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Global Custom CSS -->
-    <link rel="stylesheet" href="style.css"> <!-- CSS rules should be in this file -->
+    <link rel="stylesheet" href="style.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
-    <!-- NO inline <style> block here -->
+    <link rel="icon" href="images/Favicon img.png" type="image/x-icon">
 
 </head>
 <body>
 
-    <!-- Navbar Section (Standardized - Facts link active) -->
+    <!-- Navbar Section -->
     <nav class="navbar navbar-expand-lg fixed-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -39,11 +37,11 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
                             <li><a class="dropdown-item" href="residential.html">Residential Area</a></li>
                             <li><a class="dropdown-item" href="commercial.html">Commercial Area</a></li>
+                            <li><a class="dropdown-item" href="agricultural.html">Agricultural Area</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="product.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
-                    <!-- Mark Facts as Active -->
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="facts.html">Facts</a></li>
                     <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
@@ -52,6 +50,7 @@
             </div>
         </div>
     </nav>
+    <!-- Navbar Section End -->
 
     <!-- Page Header -->
     <header class="page-header-facts text-white d-flex align-items-center">
@@ -60,10 +59,11 @@
             <p class="lead col-lg-9 mx-auto animate-on-load animate-delay-1">Discover surprising truths and innovative techniques behind rainwater harvesting.</p>
         </div>
     </header>
+    <!-- Page Header End -->
 
     <main>
 
-        <!-- Section 1: "Did You Know?" Facts (Restored to 6 items) -->
+        <!-- "Did You Know?" Facts -->
         <section id="did-you-know" class="py-5">
             <div class="container">
                 <h2 class="section-heading text-center mb-5">Did You Know?</h2>
@@ -125,15 +125,16 @@
                 </div>
             </div>
         </section>
+        <!-- "Did You Know?" Facts End -->
 
-        <!-- Section 2: Interesting Methods (Restored to 6 items) -->
-        <section id="interesting-methods" class="py-5">
+        <!-- Interesting Methods -->
+        <section id="interesting-methods" class="py-5 bg-light">
             <div class="container">
                 <h2 class="section-heading text-center mb-5">Beyond the Basics: Interesting Methods</h2>
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-1">
-                            <img src="images/method-green-roof.jpg" class="card-img-top" alt="Green roof with vegetation">
+                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-1 text-center">
+                            <img src="images/green roof.jpg" class="card-img-top" alt="Green roof with vegetation">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title"><i class="fas fa-leaf me-2"></i>Green Roofs</h5>
                                 <p class="card-text flex-grow-1">Vegetated roofs absorb rainwater, reduce runoff speed, filter pollutants naturally, and provide insulation benefits before water is collected.</p>
@@ -141,8 +142,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-2">
-                            <img src="images/method-fog-harvesting.jpg" class="card-img-top" alt="Fog harvesting nets on a hillside">
+                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-2 text-center">
+                            <img src="images/fog harvesting net.jpg" class="card-img-top" alt="Fog harvesting nets on a hillside">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title"><i class="fas fa-smog me-2"></i>Fog Harvesting</h5>
                                 <p class="card-text flex-grow-1">In coastal or mountainous areas with frequent fog, large mesh nets capture tiny water droplets from the air, which then drip into collection channels.</p>
@@ -150,47 +151,22 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-3">
-                            <img src="images/method-rain-garden.jpg" class="card-img-top" alt="Rain garden with plants in a depression">
+                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-3 text-center">
+                            <img src="images/rain garden with plants.jpg" class="card-img-top" alt="Rain garden with plants in a depression">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title"><i class="fas fa-water-ladder me-2"></i>Swales & Rain Gardens</h5>
                                 <p class="card-text flex-grow-1">Shallow landscaped depressions (swales) or planted areas (rain gardens) designed to capture, slow, and filter surface runoff, promoting groundwater recharge.</p>
                             </div>
                         </div>
+                    
                     </div>
-                    <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-1">
-                            <img src="images/method-check-dam.jpg" class="card-img-top" alt="Small check dam in a rural channel">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title"><i class="fas fa-dam me-2"></i>Check Dams</h5>
-                                <p class="card-text flex-grow-1">Small, often temporary barriers built across drainage channels in rural or agricultural areas to slow runoff, increase infiltration, and trap sediment.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-2">
-                            <img src="images/method-permeable-pavement.jpg" class="card-img-top" alt="Permeable pavement allowing water through">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title"><i class="fas fa-border-all me-2"></i>Permeable Pavements</h5>
-                                <p class="card-text flex-grow-1">Special pavements allow rainwater to filter through into underlying storage layers (like gravel beds or modular tanks) instead of running off.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
-                        <div class="card method-card h-100 fade-in-on-scroll animate-delay-3">
-                            <img src="images/method-awg.jpg" class="card-img-top" alt="Atmospheric water generator unit">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title"><i class="fas fa-wind me-2"></i>Atmospheric Water Gen.</h5>
-                                <p class="card-text flex-grow-1">Advanced devices that extract water vapor directly from the air through condensation, often powered by electricity or solar energy.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- / .row -->
-            </div> <!-- / .container -->
+                </div>
+            </div>
         </section>
+        <!-- Interesting Methods End -->
 
-        <!-- *** NEW Section 3: Water Quality Insights *** -->
-        <section id="water-quality-insights" class="py-5 bg-light">
+        <!-- Water Quality Insights -->
+        <section id="water-quality-insights" class="py-5">
              <div class="container">
                 <h2 class="section-heading text-center mb-5">Water Quality Insights</h2>
                 <div class="row justify-content-center">
@@ -204,14 +180,15 @@
                             <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Presence of overhanging trees or bird droppings</li>
                             <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Proper system maintenance (cleaning gutters, tanks)</li>
                         </ul>
-                        <p class="mt-4"><a href="education.html#edu-quality" class="btn btn-outline-primary">Learn More About Treatment</a></p>
+                        <p class="mt-4"><a href="education.html#edu-quality" class="btn btn-outline-primary">Learn About Treatment</a></p>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Water Quality Insights End -->
 
-        <!-- *** NEW Section 4: Economic & Environmental Wins *** -->
-        <section id="eco-wins" class="py-5">
+        <!-- Economic & Environmental Wins -->
+        <section id="eco-wins" class="py-5 bg-light">
             <div class="container">
                 <h2 class="section-heading text-center mb-5">Economic & Environmental Wins</h2>
                 <div class="row g-4">
@@ -245,13 +222,13 @@
                 </div>
             </div>
         </section>
+        <!-- Economic & Environmental Wins End -->
 
-        <!-- Section 5: Myth vs. Fact (Restored to 5 items) -->
-        <section id="myth-vs-fact" class="py-5 bg-light">
+        <!-- Myth vs. Fact -->
+        <section id="myth-vs-fact" class="py-5">
             <div class="container">
                 <h2 class="section-heading text-center mb-5">Myth vs. Fact</h2>
                 <div class="row g-4 justify-content-center">
-                    <!-- Myth/Fact Card 1 -->
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="myth-fact-card fade-in-on-scroll animate-delay-1">
                             <div class="myth-section">
@@ -259,11 +236,10 @@
                             </div>
                             <div class="fact-section">
                                 <h6 class="fact-title"><i class="fas fa-check-circle me-2"></i>Fact:</h6>
-                                <p>It's often *most* valuable in drier climates. Even infrequent heavy rains can fill large tanks, providing crucial water during dry spells.</p>
+                                <p>It's often <strong>most</strong> valuable in drier climates. Even infrequent heavy rains can fill large tanks, providing crucial water during dry spells.</p>
                             </div>
                         </div>
                     </div>
-                    <!-- Myth/Fact Card 2 -->
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="myth-fact-card fade-in-on-scroll animate-delay-2">
                             <div class="myth-section">
@@ -275,7 +251,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Myth/Fact Card 3 -->
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="myth-fact-card fade-in-on-scroll animate-delay-3">
                             <div class="myth-section">
@@ -287,7 +262,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Myth/Fact Card 4 -->
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="myth-fact-card fade-in-on-scroll animate-delay-1">
                             <div class="myth-section">
@@ -299,7 +273,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Myth/Fact Card 5 -->
                     <div class="col-lg-6 d-flex align-items-stretch">
                         <div class="myth-fact-card fade-in-on-scroll animate-delay-2">
                             <div class="myth-section">
@@ -311,13 +284,13 @@
                             </div>
                         </div>
                     </div>
-                     <!-- Removed the 6th Myth/Fact card to restore previous count -->
-                </div> <!-- / .row -->
-            </div> <!-- / .container -->
+                </div>
+            </div>
         </section>
+        <!-- Myth vs. Fact End -->
 
-        <!-- *** NEW Section 6: Simple Starting Points *** -->
-        <section id="simple-starts" class="py-5">
+        <!-- Simple Starting Points -->
+        <section id="simple-starts" class="py-5 bg-light">
             <div class="container">
                 <h2 class="section-heading text-center mb-5">Simple Starting Points</h2>
                  <div class="row g-4 justify-content-center">
@@ -342,8 +315,9 @@
                  </div>
             </div>
         </section>
+        <!-- Simple Starting Points End -->
 
-        <!-- Optional CTA -->
+        <!-- CTA -->
         <section class="cta-home py-5 text-center text-white fade-in-on-scroll">
             <div class="container">
                 <h2 class="display-5 fw-bold mb-3">Inspired by the Facts?</h2>
@@ -351,23 +325,76 @@
                 <a href="contact.html" class="btn btn-light btn-lg px-5 py-3 fw-semibold shadow">Ask Our Experts</a>
             </div>
         </section>
+        <!-- CTA End -->
 
     </main>
 
     <!-- Scroll to Top Button -->
     <a href="#" id="scrollToTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></a>
+    <!-- Scroll to Top Button End -->
 
     <!-- Footer -->
-    <footer class="footer-home py-4">
-        <div class="container text-center">
-             <p class="mb-2">
-                <a href="index.html" class="mx-2">Home</a>|
-                <a href="#" class="mx-2">Privacy Policy</a>|
-                <a href="contact.html" class="mx-2">Contact</a>
-            </p>
-            <p class="mb-0 small">&copy; <span id="currentYear"></span> Aqua Harvest Solutions. All Rights Reserved.</p>
+    <footer class="footer-section pt-5 pb-4">
+        <div class="container">
+            <div class="row justify-content-center">
+                <!-- Column 1: Brand/About -->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <a class="navbar-brand mb-3 d-inline-block" href="index.html">
+                        <img src="images/Aqua_harvest-removebg-preview.png" alt="Aqua Harvest Logo" height="60">
+                    </a>
+                    <p class="footer-text">Providing sustainable rainwater harvesting solutions for a greener future in Pakistan.</p>
+                    <div class="social-icons mt-3">
+                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+
+                <!-- Column 2: Quick Links -->
+                <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Quick Links</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li> <!-- Placeholder Link -->
+                        <li><a href="product.html">Products</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+
+                <!-- Column 3: Services/Usage -->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Usage Areas</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="residential.html">Residential</a></li>
+                        <li><a href="commercial.html">Commercial</a></li>
+                        <li><a href="agricultural.html">Agricultural</a></li>
+                        <li><a href="education.html">Education Center</a></li>
+                        <li><a href="update.html">Updates</a></li>
+                    </ul>
+                </div>
+
+                <!-- Column 4: Contact Info -->
+                <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Contact Us</h5>
+                    <ul class="list-unstyled footer-contact-info">
+                        <li><i class="fas fa-map-marker-alt"></i> Korangi Industrial Area, Karachi, Pakistan</li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+922131234567">+92 21 31234567</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@aquaharvest.pk">info@aquaharvest.pk</a></li>
+                        <li><i class="fas fa-clock"></i> Mon - Sat: 9:00 AM - 6:00 PM</li>
+                    </ul>
+                </div>
+            </div>
+
+            <hr class="footer-divider">
+
+            <div class="text-center footer-bottom-text">
+                &copy; <span id="currentYear"></span> Aqua Harvest Solutions. All Rights Reserved. | <a href="privacy.html">Privacy Policy</a> <!-- Placeholder -->
+            </div>
         </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
